# toxic

./: .gitignore  .gitmodules  .travis.yml  INSTALL  INSTALL.md  Makefile  README.md  build.sh  configure  configure.in
BSDBuild_ref/: Makefile.config  configure.lua  man2wiki  mkconfigure  mkify  mkprojfiles
BSDBuild_ref/BSDBuild/: Makefile  ncurses.pm  toxav.pm  toxcore.pm
BSDBuild_ref/config/: bindir.h  datadir.h  libdir.h  libexecdir.h  localedir.h  mandir.h  moduledir.h  prefix.h  statedir.h  sysconfdir.h
cfg/: global_vars.mk
cfg/systems/: Darwin.mk
cfg/targets/: install.mk
src/: audio_call.c  autocomplete.c  avatars.c  chat.c  chat_commands.c  configdir.c  dns.c  execute.c  friendlist.c  global_commands.c  group_commands.c  groupchat.c  help.c  line_info.c  log.c  message_queue.c  misc_tools.c  prompt.c  toxic.c  toxic.h  windows.c
translations/: en.mo  en.po  it.mo  it.po  toxic.pot
translations/tools/: create_po.sh
