PACKAGE("Toxic")
VERSION("0.3.1")

REGISTER_SECTION("Toxic features")
REGISTER("--disable-av",		"Disables calling [no]")
REGISTER("--enable-unixtime",		"Uses Unix timestamps [no]")
REGISTER_SECTION("paths")
REGISTER("--with-dependency-search=DIR",	"search for dependencies in DIR"
REGISTER("--with-libtoxcore-headers=DIR",	"search for libtoxcore header files in DIR")
REGISTER("--with-libtoxcore-libs=DIR",	"search for libtoxcore libraries in DIR")
REGISTER("--with-libsodium-headers=DIR",	"search for libsodium header files in DIR")
REGISTER("--with-libsodium-libs=DIR",	"search for libsodium libraries in DIR")
REGISTER("--with-libtoxav-headers=DIR",	"search for libtoxav header files in DIR")
REGISTER("--with-libtoxav-libs=DIR",	"search for libtoxav libraries in DIR")
REGISTER("--prefix=PREFIX",	"Installs to PREFIX [/usr/local]")

